--- a/KGCA41/Tree_1/Tree_1.vcxproj
+++ b/KGCA41/Tree_1/Tree_1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{89551007-bdae-4299-a439-52f0876139bf}</ProjectGuid>
-    <RootNamespace>LinkedList0</RootNamespace>
+    <ProjectGuid>{ce421673-71e8-4e08-8921-1cb843a0ef65}</ProjectGuid>
+    <RootNamespace>Tree1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>../../output/Debug/</OutDir>
-    <IntDir>../../output/Debug/LinkedList_0</IntDir>
+    <OutDir>../../output/Debug/Tree_1</OutDir>
+    <IntDir>../../output/Debug/Tree_1</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -141,9 +141,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="Tree_1.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="THashTable.h" />
     <ClInclude Include="TLinkedList.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
