--- a/KGCA41/Quadtree_1/Quadtree_1.vcxproj
+++ b/KGCA41/Quadtree_1/Quadtree_1.vcxproj
@@ -143,6 +143,9 @@
   <ItemGroup>
     <ClCompile Include="Quadtree_1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TCollision.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
