--- a/KGCA41/Quadtree_1/Quadtree_1.vcxproj.filters
+++ b/KGCA41/Quadtree_1/Quadtree_1.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TCollision.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
