--- a/KGCA41/Quadtree_1/Quadtree_1.vcxproj.filters
+++ b/KGCA41/Quadtree_1/Quadtree_1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Quadtree_1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TCollision.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCollision.h">
