--- a/KGCA41/Quadtree_2/Quadtree_2.vcxproj
+++ b/KGCA41/Quadtree_2/Quadtree_2.vcxproj
@@ -143,10 +143,16 @@
   <ItemGroup>
     <ClCompile Include="Quadtree_2.cpp" />
     <ClCompile Include="TCollision.cpp" />
+    <ClCompile Include="TNode.cpp" />
+    <ClCompile Include="TObject.cpp" />
+    <ClCompile Include="TQuadtree.cpp" />
     <ClCompile Include="TVector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCollision.h" />
+    <ClInclude Include="TNode.h" />
+    <ClInclude Include="TObject.h" />
+    <ClInclude Include="TQuadtree.h" />
     <ClInclude Include="TVector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
