--- a/KGCA41/Quadtree_2/Quadtree_2.vcxproj.filters
+++ b/KGCA41/Quadtree_2/Quadtree_2.vcxproj.filters
@@ -24,12 +24,30 @@
     <ClCompile Include="TVector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TQuadtree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TNode.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TCollision.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TVector.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TQuadtree.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TNode.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
