--- a/KGCA41/Quadtree_2/Quadtree_2.vcxproj.filters
+++ b/KGCA41/Quadtree_2/Quadtree_2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Quadtree_2.cpp">
+    <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TCollision.cpp">
@@ -74,5 +74,8 @@
     <ClInclude Include="TGameCore.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
