--- a/KGCA41/Quadtree_2/Quadtree_2.vcxproj
+++ b/KGCA41/Quadtree_2/Quadtree_2.vcxproj
@@ -117,7 +117,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ConformanceMode>true</ConformanceMode>
+      <ConformanceMode>false</ConformanceMode>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -141,7 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Quadtree_2.cpp" />
+    <ClCompile Include="Sample.cpp" />
     <ClCompile Include="TCollision.cpp" />
     <ClCompile Include="TGameCore.cpp" />
     <ClCompile Include="TGamePlayer.cpp" />
@@ -162,6 +162,9 @@
     <ClInclude Include="TObject.h" />
     <ClInclude Include="TQuadtree.h" />
     <ClInclude Include="TVector.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
