--- a/KGCA41/Octree_1/Octree_1.vcxproj.filters
+++ b/KGCA41/Octree_1/Octree_1.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="TVector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TGameCore.h">
@@ -54,6 +57,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TVector.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
