--- a/KGCA41/Octree_1/Octree_1.vcxproj.filters
+++ b/KGCA41/Octree_1/Octree_1.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="TGamePlayer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TQuadtree.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TGameCore.h">
@@ -72,6 +75,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TGamePlayer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TQuadtree.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
