--- a/KGCA41/Octree_1/Octree_1.vcxproj.filters
+++ b/KGCA41/Octree_1/Octree_1.vcxproj.filters
@@ -81,4 +81,7 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
