--- a/KGCA41/Octree_1/Octree_1.vcxproj
+++ b/KGCA41/Octree_1/Octree_1.vcxproj
@@ -165,6 +165,9 @@
     <ClInclude Include="TSpacePartition.h" />
     <ClInclude Include="TVector.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
