--- a/KGCA41/P2_CreateWindow/P2_CreateWindow.vcxproj.filters
+++ b/KGCA41/P2_CreateWindow/P2_CreateWindow.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Sample.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TStd.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TWindow.cpp">
