--- a/KGCA41/CreateTriangle1/CreateTriangle1.vcxproj.filters
+++ b/KGCA41/CreateTriangle1/CreateTriangle1.vcxproj.filters
@@ -28,6 +28,12 @@
     <ClCompile Include="TWindow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TBaseObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TVector.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h">
@@ -40,6 +46,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TWindow.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TBaseObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TVector.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
