--- a/KGCA41/CreateTextureObject/CreateTextureObject.vcxproj
+++ b/KGCA41/CreateTextureObject/CreateTextureObject.vcxproj
@@ -159,7 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="PixelShader.txt" />
-    <Text Include="Shape.txt" />
+    <Text Include="DefaultShape.txt" />
     <Text Include="VertexShader.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
