--- a/KGCA41/CreateObject_0/CreateObject_0.vcxproj
+++ b/KGCA41/CreateObject_0/CreateObject_0.vcxproj
@@ -166,7 +166,7 @@
     <ClInclude Include="TWindow.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="VertexShader.txt" />
+    <Text Include="..\..\data\shader\DefaultShape.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
