--- a/KGCA41/TGameCoreSample/TGameCoreSample.vcxproj.filters
+++ b/KGCA41/TGameCoreSample/TGameCoreSample.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="TTimer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TInput.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h">
@@ -48,6 +51,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="TTimer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="TInput.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
