--- a/KGCA41/TGameCoreSample/TGameCoreSample.vcxproj
+++ b/KGCA41/TGameCoreSample/TGameCoreSample.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="TInput.cpp" />
     <ClCompile Include="TTimer.cpp" />
     <ClCompile Include="TWindow.cpp" />
+    <ClCompile Include="TWriter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
@@ -158,6 +159,7 @@
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TTimer.h" />
     <ClInclude Include="TWindow.h" />
+    <ClInclude Include="TWriter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
