--- a/KGCA41/TSampleSprite_0/TSampleSprite_0.vcxproj
+++ b/KGCA41/TSampleSprite_0/TSampleSprite_0.vcxproj
@@ -150,11 +150,14 @@
     <ClCompile Include="TDxState.cpp" />
     <ClCompile Include="TGameCore.cpp" />
     <ClCompile Include="TInput.cpp" />
+    <ClCompile Include="TNpc2D.cpp" />
+    <ClCompile Include="TObject2D.cpp" />
     <ClCompile Include="TShader.cpp" />
     <ClCompile Include="TShaderManager.cpp" />
     <ClCompile Include="TTexture.cpp" />
     <ClCompile Include="TTextureManager.cpp" />
     <ClCompile Include="TTimer.cpp" />
+    <ClCompile Include="TUser2D.cpp" />
     <ClCompile Include="TVector.cpp" />
     <ClCompile Include="TWindow.cpp" />
     <ClCompile Include="TWriter.cpp" />
@@ -167,12 +170,15 @@
     <ClInclude Include="TDxState.h" />
     <ClInclude Include="TGameCore.h" />
     <ClInclude Include="TInput.h" />
+    <ClInclude Include="TNpc2D.h" />
+    <ClInclude Include="TObject2D.h" />
     <ClInclude Include="TShader.h" />
     <ClInclude Include="TShaderManager.h" />
     <ClInclude Include="TStd.h" />
     <ClInclude Include="TTexture.h" />
     <ClInclude Include="TTextureManager.h" />
     <ClInclude Include="TTimer.h" />
+    <ClInclude Include="TUser2D.h" />
     <ClInclude Include="TVector.h" />
     <ClInclude Include="TWindow.h" />
     <ClInclude Include="TWriter.h" />
