--- a/KGCA41/TGameCore/TGameCore.vcxproj.filters
+++ b/KGCA41/TGameCore/TGameCore.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="TDevice.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TGameCore.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TWindow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TDevice.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TGameCore.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
