--- a/KGCA41/TSampleBaseObject/TSampleBaseObject.vcxproj
+++ b/KGCA41/TSampleBaseObject/TSampleBaseObject.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{77e4eeb1-c5ef-4dfb-8459-111e71b967e4}</ProjectGuid>
+    <ProjectGuid>{7C9A2842-E8A1-4671-A19A-A3F389E4B0DA}</ProjectGuid>
     <RootNamespace>TSampleTriangle</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -150,9 +150,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TBaseObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TBaseObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TGameCore\TGameCore.vcxproj">
