--- a/KGCA41/TGameCore/TGameCore.vcxproj.filters
+++ b/KGCA41/TGameCore/TGameCore.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="TWriter.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TVector.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TWindow.cpp">
@@ -54,6 +57,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TWriter.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TVector.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
