--- a/KGCA41/TGameCore/TGameCore.vcxproj.filters
+++ b/KGCA41/TGameCore/TGameCore.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="TVector.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TBaseObject.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TWindow.cpp">
@@ -60,6 +63,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TVector.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TBaseObject.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
