--- a/KGCA41/TGameCore/TGameCore.vcxproj
+++ b/KGCA41/TGameCore/TGameCore.vcxproj
@@ -183,6 +183,9 @@ copy "TGameCore_R.lib" "..\\..\\lib\\"</Command>
     <ClCompile Include="TWindow.cpp" />
     <ClCompile Include="TWriter.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\data\shader\DefaultShape.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
